# rratsolve

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
rratsolve/: __init__.py  core.py
rratsolve/tests/: test_rratsolve.py
webapp/: webapp.py
webapp/static/: style.css
webapp/templates/: error.html  index.html  results.html  solve.html
