[metadata]
name = rratsolve
url = https://bitbucket.org/vmorello/rratsolve
author = Vincent Morello
author_email = vmorello@gmail.com
description = A robust brute-force pulsar periodicity solver that needs only a few sparse TOAs
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:

install_requires =
    numpy
